fix(fundingrequests): use ellipses for overlapping text in fundingrequest list

--- a/src/coda/apps/static/css/components.css
+++ b/src/coda/apps/static/css/components.css
@@ -23,7 +23,7 @@ article.fundingrequest {
   text-align: center;
 }
 
-.fundingrequest__title {
+.text-ellipsis {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
