--- a/src/coda/apps/static/css/spacing.css
+++ b/src/coda/apps/static/css/spacing.css
@@ -2,6 +2,10 @@
   margin: 0;
 }
 
+.mb-0_5 {
+  margin-block-end: 0.5rem;
+}
+
 .mb-1 {
   margin-block-end: 1rem;
 }
